<?xml version="1.0"?>
<package format="2">
  <name>turtle_controller</name>
  <version>1.0.0</version>
  <description>A turtle controller</description>
  <maintainer email="filip.bjelonic@gmail.com">Filip</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
